[gd_scene format=3 uid="uid://cw1mp5rpphecy"]

[ext_resource type="Script" uid="uid://b7187i5uit2ve" path="res://scripts/menu.gd" id="1_cwb3k"]
[ext_resource type="Texture2D" uid="uid://osq38j7t6h36" path="res://assets/background/depositphotos_527863340-stock-video-binary-code-on-a-dark.jpg" id="2_cwb3k"]
[ext_resource type="FontFile" uid="uid://yfchh8x4esx2" path="res://assets/pixel-operator-fuente/PixelOperator8-Bold.ttf" id="3_7u104"]
[ext_resource type="AudioStream" uid="uid://y2kml84ufdmi" path="res://sounds/gamer over.mp3" id="3_ccgoi"]
[ext_resource type="FontFile" uid="uid://t73je13fsxfc" path="res://assets/pixel-operator-fuente/PixelOperator-Bold.ttf" id="5_mvr4g"]
[ext_resource type="Script" uid="uid://cahvvaq0niidx" path="res://scripts/hub.gd" id="6_csn76"]
[ext_resource type="FontFile" uid="uid://cws2sm4ux2eqh" path="res://assets/pixel-operator-fuente/PixelOperatorSC.ttf" id="6_mvr4g"]
[ext_resource type="Texture2D" uid="uid://ct24jwysdejvf" path="res://assets/hub/life.png" id="8_k8pbw"]
[ext_resource type="Texture2D" uid="uid://flvlccq40qcs" path="res://assets/buttons/PNG/Yellow/Default/arrow_basic_e.png" id="9_bqmx0"]
[ext_resource type="Texture2D" uid="uid://cbnypfh4vv7yw" path="res://assets/buttons/PNG/Yellow/Default/icon_outline_checkmark.png" id="10_w44qq"]
[ext_resource type="Texture2D" uid="uid://cbdhtlc85n775" path="res://assets/buttons/PNG/Yellow/Default/arrow_decorative_e.png" id="11_o36v6"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_cwb3k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8pbw"]
bg_color = Color(0.6, 0.27058825, 0.9411765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nl4x"]
bg_color = Color(1, 0.6, 0.03137255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vfgkj"]
content_margin_left = 15.0
bg_color = Color(0.7853087, 0.52079916, 0.4935742, 0.3254902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 11

[node name="Control" type="Control" unique_id=154517804]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_cwb3k")

[node name="TextureRect" type="TextureRect" parent="." unique_id=842736084]
modulate = Color(1, 0.21960784, 0.3137255, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cwb3k")

[node name="Label" type="Label" parent="." unique_id=2126765259]
layout_mode = 0
offset_left = 144.0
offset_top = 126.0
offset_right = 1015.0
offset_bottom = 209.0
theme_override_colors/font_outline_color = Color(0.5686275, 0.1764706, 0.24705882, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("3_7u104")
theme_override_font_sizes/font_size = 82
text = "GAME OVER !!"

[node name="GamerOver" type="AudioStreamPlayer" parent="." unique_id=1921798997]
stream = ExtResource("3_ccgoi")
autoplay = true

[node name="buttons" type="HBoxContainer" parent="." unique_id=1339849198]
layout_mode = 0
offset_left = 365.0
offset_top = 429.0
offset_right = 795.0
offset_bottom = 520.0
theme_override_constants/separation = 50

[node name="Button2" type="Button" parent="buttons" unique_id=1454168133]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_constants/align_to_largest_stylebox = 20
theme_override_constants/line_spacing = 20
theme_override_fonts/font = ExtResource("5_mvr4g")
theme_override_font_sizes/font_size = 60
text = "DESKTOP"

[node name="Button" type="Button" parent="buttons" unique_id=1784545782]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_constants/align_to_largest_stylebox = 20
theme_override_constants/line_spacing = 20
theme_override_fonts/font = ExtResource("5_mvr4g")
theme_override_font_sizes/font_size = 60
text = "RETRY"

[node name="hub" type="CanvasLayer" parent="." unique_id=1405717253]
script = ExtResource("6_csn76")

[node name="VBoxContainer" type="VBoxContainer" parent="hub" unique_id=16700609]
clip_contents = true
offset_left = 381.0
offset_top = 222.0
offset_right = 1401.0
offset_bottom = 651.0
scale = Vector2(0.4, 0.4)
theme_override_constants/separation = 10

[node name="level" type="HBoxContainer" parent="hub/VBoxContainer" unique_id=936424880]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="hub/VBoxContainer/level" unique_id=1610761825]
layout_mode = 2
theme_override_constants/shadow_offset_x = 20
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("6_mvr4g")
theme_override_font_sizes/font_size = 106
text = " Level "

[node name="counter_level" type="Label" parent="hub/VBoxContainer/level" unique_id=4604725]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/shadow_offset_x = 20
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("6_mvr4g")
theme_override_font_sizes/font_size = 106
text = " 00. "

[node name="level_label" type="Label" parent="hub/VBoxContainer/level" unique_id=512808948]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 1)
layout_mode = 2
theme_override_constants/shadow_offset_x = 20
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("6_mvr4g")
theme_override_font_sizes/font_size = 84
text = "Rank"
horizontal_alignment = 3
autowrap_mode = 2

[node name="point" type="HBoxContainer" parent="hub/VBoxContainer" unique_id=975440139]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="hub/VBoxContainer/point" unique_id=727835256]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.65851885, 0.65793604, 0, 1)
theme_override_constants/shadow_offset_x = 20
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("6_mvr4g")
theme_override_font_sizes/font_size = 100
text = "Total points: "

[node name="counter_points" type="Label" parent="hub/VBoxContainer/point" unique_id=522386660]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.65851885, 0.65793604, 0, 1)
theme_override_constants/shadow_offset_x = 20
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("6_mvr4g")
theme_override_font_sizes/font_size = 100
text = "00"

[node name="counter_lifes" type="HBoxContainer" parent="hub/VBoxContainer" unique_id=1484221371]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="life1" type="TextureRect" parent="hub/VBoxContainer/counter_lifes" unique_id=781855452]
layout_mode = 2
texture = ExtResource("8_k8pbw")

[node name="life2" type="TextureRect" parent="hub/VBoxContainer/counter_lifes" unique_id=1000373135]
layout_mode = 2
texture = ExtResource("8_k8pbw")

[node name="life3" type="TextureRect" parent="hub/VBoxContainer/counter_lifes" unique_id=1070364216]
layout_mode = 2
texture = ExtResource("8_k8pbw")

[node name="hub_Control_VBoxContainer#TimeBar" type="ProgressBar" parent="." unique_id=1071658149]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(855, 40)
layout_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/outline_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_k8pbw")
theme_override_styles/fill = SubResource("StyleBoxFlat_2nl4x")
value = 100.0
show_percentage = false

[node name="NameInput" type="LineEdit" parent="." unique_id=1348358344]
layout_mode = 0
offset_left = 263.0
offset_top = 550.0
offset_right = 963.0
offset_bottom = 606.0
theme_override_font_sizes/font_size = 27
theme_override_styles/normal = SubResource("StyleBoxFlat_vfgkj")
placeholder_text = "Introduce tu nombre..."
max_length = 24

[node name="SaveButton" type="TextureButton" parent="NameInput" unique_id=679015643]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -16.0
offset_right = -14.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("9_bqmx0")
texture_pressed = ExtResource("10_w44qq")
texture_hover = ExtResource("11_o36v6")

[connection signal="pressed" from="buttons/Button2" to="." method="_on_desktop_button_pressed"]
[connection signal="pressed" from="buttons/Button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="NameInput/SaveButton" to="." method="_on_save_button_pressed"]
